[gd_scene load_steps=45 format=2]

[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_3.png" type="Texture" id=1]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_5.png" type="Texture" id=2]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_7.png" type="Texture" id=3]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_3.png" type="Texture" id=5]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_2.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Skeleton.gd" type="Script" id=7]
[ext_resource path="res://HurtHitbox/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_4.png" type="Texture" id=9]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_5.png" type="Texture" id=10]
[ext_resource path="res://Characters/Skeleton 1/attack 2/skeleton1_attack2_4 - Copy - Copy.png" type="Texture" id=11]
[ext_resource path="res://Characters/Skeleton 1/attack 2/skeleton1_attack2_1.png" type="Texture" id=12]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_6.png" type="Texture" id=13]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_6.png" type="Texture" id=14]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_2.png" type="Texture" id=15]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_4.png" type="Texture" id=16]
[ext_resource path="res://Characters/Skeleton 1/attack 2/skeleton1_attack2_2.png" type="Texture" id=17]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_1.png" type="Texture" id=18]
[ext_resource path="res://Characters/Skeleton 1/attack 2/skeleton1_attack2_3.png" type="Texture" id=19]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_3.png" type="Texture" id=21]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_1.png" type="Texture" id=22]
[ext_resource path="res://Characters/Skeleton 1/run/skeleton1_run_4.png" type="Texture" id=23]
[ext_resource path="res://Characters/Skeleton 1/hit/skeleton1_hit_8.png" type="Texture" id=25]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=28]
[ext_resource path="res://PlayerInRangShuriken.gd" type="Script" id=29]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=30]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_6.png" type="Texture" id=31]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_5.png" type="Texture" id=32]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_7.png" type="Texture" id=33]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_1.png" type="Texture" id=34]
[ext_resource path="res://Characters/Skeleton 1/idle/skeleton1_idle_3.png" type="Texture" id=35]
[ext_resource path="res://Characters/Skeleton 1/idle/skeleton1_idle_2.png" type="Texture" id=36]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_2.png" type="Texture" id=37]
[ext_resource path="res://Characters/Skeleton 1/die/skeleton1_die_8.png" type="Texture" id=38]
[ext_resource path="res://Characters/Skeleton 1/idle/skeleton1_idle_1.png" type="Texture" id=39]
[ext_resource path="res://Characters/Skeleton 1/idle/skeleton1_idle_4.png" type="Texture" id=48]

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.1182
height = 42.2953

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 39 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack1"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_axe"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 37 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 38 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 25 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 39 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.5 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 6 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 14 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 1026.32, 84.6354 )

[sub_resource type="CircleShape2D" id=10]
radius = 984.501

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -7.81038, 7.67809 )
polygon = PoolVector2Array( -29.201, 76.423, 45.7523, 77.8372, 4.74013, -79.1405 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -5.58403, 0.876759 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 11 )
anims/attack1 = SubResource( 3 )
anims/die = SubResource( 4 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 39 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 28 )]
modulate = Color( 1, 1, 1, 0.231373 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 34.9174, -9.44394 )
shape = SubResource( 12 )

[node name="Stats" parent="." instance=ExtResource( 30 )]
max_health = 3

[node name="PlayerInRange" parent="." instance=ExtResource( 28 )]
visible = false
script = ExtResource( 29 )

[node name="CollisionShape2D" parent="PlayerInRange" index="0"]
self_modulate = Color( 1, 1, 1, 0.392157 )
shape = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerInRange" to="PlayerInRange" method="_on_PlayerInRange_body_entered"]
[connection signal="body_exited" from="PlayerInRange" to="PlayerInRange" method="_on_PlayerInRange_body_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="PlayerInRange"]
